Common Python utilities for packages updating

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,13 @@
     "search.useIgnoreFiles": false,
 
     /* ============================================================================================================================ */
+    /* ------------------------------------------------------ Python Settings ----------------------------------------------------- */
+    /* ============================================================================================================================ */
+
+    // Additional Python paths
+    "python.envFile": "${workspaceFolder}/.vscode/.env",
+
+    /* ============================================================================================================================ */
     /* ------------------------------------------------------- CMake Settings ----------------------------------------------------- */
     /* ============================================================================================================================ */
 
@@ -170,7 +177,7 @@
                 "\"\"\" ",
                 "",
                 ".. module:: ",
-                "   :platform: Unix",
+                "   :platform: Unix, Windows",
                 "   :synopsis: ",
                 "",
                 ".. moduleauthor:: <<author>> <<<authoremail>>>",
