--- a/src/hal/CMakeLists.txt
+++ b/src/hal/CMakeLists.txt
@@ -3,7 +3,7 @@
 # @author     Krzysztof Pierczyk (krzysztof.pierczyk@gmail.com)
 # @maintainer Krzysztof Pierczyk (krzysztof.pierczyk@gmail.com)
 # @date       Monday, 14th June 2021 6:53:50 pm
-# @modified   Monday, 1st August 2022 10:32:06 pm
+# @modified   Wednesday, 3rd August 2022 12:23:20 am
 # @project    stm-utils
 # @brief      CMakeList for used elements of HAL library
 #    
@@ -14,10 +14,15 @@
 # ------------------------------------------------------------ Options ---------------------------------------------------------------
 # ====================================================================================================================================
 
+# Path to the include directory containing hal_assert.h and hal_config.h files
+set(HAL_CONFIG_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/config" CACHE PATH    
+    "Path to the include directory containing hal_assert.h and hal_config.h files")
 # Target device
-option(USE_FULL_LL "If true, full LL library is built" ON)
+set(USE_FULL_LL ON CACHE BOOL
+    "If true, full LL library is built")
 # Target device
-option(HAL_BUILD "If true, HAL library is built on top of LL" ON)
+set(HAL_BUILD ON CACHE BOOL
+    "If true, HAL library is built on top of LL")
 
 # ====================================================================================================================================
 # ------------------------------------------------------- Library definition ---------------------------------------------------------
@@ -27,18 +32,21 @@ option(HAL_BUILD "If true, HAL library is built on top of LL" ON)
 file(GLOB LlSources  ${CMAKE_CURRENT_SOURCE_DIR}/src/ll/${DeviceFamily}/*.c)
 # Get HAL sources for specific device
 if(HAL_BUILD)
+    
+    # Get basic HAL sources
     file(GLOB HalSources ${CMAKE_CURRENT_SOURCE_DIR}/src/hal/${DeviceFamily}/*.c)
-endif()
-# Get legacy HAL sources if exist
-if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src/hal/${DeviceFamily}/Legacy)
-    file(GLOB HalLegacySources ${CMAKE_CURRENT_SOURCE_DIR}/src/hal/${DeviceFamily}/Legacy/*.c)
+    # Get legacy HAL sources if exist
+    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src/hal/${DeviceFamily}/Legacy)
+        file(GLOB HalLegacySources ${CMAKE_CURRENT_SOURCE_DIR}/src/hal/${DeviceFamily}/Legacy/*.c)
+    endif()
+
 endif()
 
 # Add a library
 add_library(hal
+    ${LlSources}
     ${HalSources}
     ${HalLegacySources}
-    ${LlSources}
 )
 
 # Add compilation flags
@@ -53,7 +61,7 @@ endif()
 target_include_directories(hal
     PUBLIC 
         $<INSTALL_INTERFACE:include>       
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/config>
+        $<BUILD_INTERFACE:${HAL_CONFIG_INCLUDE_DIR}
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/config/include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/ll/${DeviceFamily}>
@@ -61,12 +69,22 @@ target_include_directories(hal
 
 # Add HAL includes if build requested
 if(HAL_BUILD)
-    target_include_directories(hal PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/hal/${DeviceFamily}>)
+
+    # Link basic HAL includes
+    target_include_directories(hal
+        PUBLIC
+            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/hal/${DeviceFamily}>
+    )
+    # Add legacy include directory, if exist
+    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/include/hal/${DeviceFamily}/Legacy)
+        target_include_directories(hal
+            PUBLIC
+                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/hal/${DeviceFamily}/Legacy>
+        )
+    endif()
+    
 endif()
 
-# Add legacy include directory, if exist
-if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/include/hal/${DeviceFamily}/Legacy)
-    target_include_directories(hal PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/hal/${DeviceFamily}/Legacy>)
 endif()
 
 # Link dependancies
@@ -118,13 +136,13 @@ if(${MASTER_PROJECT})
     set_target_properties(hal PROPERTIES EXPORT_NAME HAL)
 
     # Install include header files
-    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/config/                             DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/config/include/                     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-    install(FILES     ${CMAKE_CURRENT_SOURCE_DIR}/include/stm32_hal.h                 DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/hal/${DeviceFamily}/        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/hal/${DeviceFamily}/Legacy/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+    install(DIRECTORY ${HAL_CONFIG_INCLUDE_DIR}                                       DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}                             )
+    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/config/include/                     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}                             )
+    install(FILES     ${CMAKE_CURRENT_SOURCE_DIR}/include/stm32_hal.h                 DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}                             )
+    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/hal/${DeviceFamily}/        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}                             )
+    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/hal/${DeviceFamily}/Legacy/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}                             )
     install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ll/                         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} FILES_MATCHING PATTERN "*.h")
-    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ll/${DeviceFamily}/         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ll/${DeviceFamily}/         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}                             )
 
     # Install legacy include LL directory, if exist
     if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/include/ll/${DeviceFamily}/Legacy)
