--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 # @author     Krzysztof Pierczyk (krzysztof.pierczyk@gmail.com)
 # @maintainer Krzysztof Pierczyk (krzysztof.pierczyk@gmail.com)
 # @date       Monday, 14th June 2021 6:53:51 pm
-# @modified   Wednesday, 3rd August 2022 2:03:31 am
+# @modified   Thursday, 4th August 2022 3:51:02 am
 # @project    stm-utils
 # @brief      CMake package for stm-utils project
 #    
@@ -25,15 +25,17 @@ if(${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR})
   set(MASTER_PROJECT ON)
 endif()
 
+# Pre-toolchain includes
+include (${CMAKE_CURRENT_LIST_DIR}/cmake/device.cmake)
+
 # Project name, version and used languages
-project(stm-utils VERSION 1.0 LANGUAGES ASM C)
+project(stm-utils VERSION 1.0 LANGUAGES ASM C CXX)
 
 # ====================================================================================================================================
 # ------------------------------------------------------------- Helpers --------------------------------------------------------------
 # ====================================================================================================================================
 
 # Includes
-include (${CMAKE_CURRENT_LIST_DIR}/cmake/device.cmake)
 include (${CMAKE_CURRENT_LIST_DIR}/cmake/helpers.cmake)
 
 # ====================================================================================================================================
@@ -66,6 +68,7 @@ add_compile_definitions(
         ${DEVICE}
         ${DeviceType}
 )
+
 # ====================================================================================================================================
 # ------------------------------------------------------------ Components ------------------------------------------------------------
 # ====================================================================================================================================
